add api statistics live-stream in day
