# docs/swagger.json
@@ -337,6 +337,51 @@
                 }
             }
         },
+        "/api/streams/statistics/day": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get statistics data for live streams in a specific day",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "streams"
+                ],
+                "summary": "Get live stream statistics data in a day",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "targeted_date",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.LiveStatRespInDayDTO"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/users": {
             "get": {
                 "security": [
@@ -1027,6 +1072,17 @@
                 }
             }
         },
+        "dto.BaseDTO": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.ChangePasswordRequest": {
             "type": "object",
             "required": [
@@ -1068,6 +1124,41 @@
                 "email": {
                     "type": "string",
                     "maxLength": 100
+                }
+            }
+        },
+        "dto.LiveStatRespInDayDTO": {
+            "type": "object",
+            "properties": {
+                "comments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.BaseDTO"
+                    }
+                },
+                "description": {
+                    "type": "string"
+                },
+                "likes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.BaseDTO"
+                    }
+                },
+                "status": {
+                    "$ref": "#/definitions/model.StreamStatus"
+                },
+                "stream_id": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "viewers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.BaseDTO"
+                    }
                 }
             }
         },
@@ -1320,6 +1411,21 @@
                 "ADMINROLE",
                 "STREAMER",
                 "USERROLE"
+            ]
+        },
+        "model.StreamStatus": {
+            "type": "string",
+            "enum": [
+                "pending",
+                "started",
+                "ended",
+                "upcoming"
+            ],
+            "x-enum-varnames": [
+                "PENDING",
+                "STARTED",
+                "ENDED",
+                "UPCOMING"
             ]
         },
         "model.UserStatusType": {
